# viikkoharjoitukset

./: .gitignore  README.md
doc/src/: html2ps.conf  make_pdfs.sh  specification.md  työaikakirjanpito.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: dev.sh  pyproject.toml
laskarit/viikko2/maksukortti/src/maksukortti/: __init__.py  maksukortti.py
laskarit/viikko2/maksukortti/tests/: test_maksukortti.py
laskarit/viikko2/unicafe/: dev.sh
laskarit/viikko2/unicafe/src/: kassapääte.py
laskarit/viikko2/unicafe/src/tests/: kassapääte_test.py  maksukortti_test.py
laskarit/viikko3/: HKL.md  MONOPOLI.md
